server/static/css/mog.css
/* latin */
@font-face {
	font-family: 'Raleway';
	font-style: normal;
	font-weight: 300;
	src: local('Raleway Light'), local('Raleway-Light'), url(/static/fonts/raleway-300.woff) format('woff');
	unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
}

/* latin */
@font-face {
	font-family: 'Raleway';
	font-style: normal;
	font-weight: 400;
	src: local('Raleway'), url(/static/fonts/raleway-400.woff) format('woff');
	unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
}

/* latin */
@font-face {
	font-family: 'Raleway';
	font-style: normal;
	font-weight: 600;
	src: local('Raleway SemiBold'), local('Raleway-SemiBold'), url(/static/fonts/raleway-600.woff) format('woff');
	unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
}

body {
	margin: 20px;
	margin-bottom: 70px;
}

.footer {
	position: fixed;
	bottom: 0;
	width: 100%;
	height: 60px;
	background-color: #f5f5f5;
}

.footer > .container {
	padding-top: 10px;
	padding-right: 15px;
	padding-left: 15px;
}

